--- a/public/_index.html
+++ b/public/_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Predix WebApp Starter</title>
+  <title>QuestionMark? Analytics</title>
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
