--- a/public/_index.html
+++ b/public/_index.html
@@ -12,15 +12,15 @@
   <link rel="import" href="index-inline-styles.html">
   <style include="index-inline-styles" is="custom-style"></style>
 
-  <!-- Px Theme: Uncomment the <link> and <style> lines immediately below to use the theme -->
+  <!-- Px Theme: Uncomment the <link> and <style> lines immediately below to use the theme
   <link rel="import" href="bower_components/px-theme/px-theme-styles.html">
-  <style include="px-theme-styles" is="custom-style"></style>
+  <style include="px-theme-styles" is="custom-style"></style> -->
 
   <!-- Dark Theme: Uncomment the <link> and <style> lines immediately below to use the theme -->
-  <!--
+
   <link rel="import" href="bower_components/px-dark-theme/px-dark-theme-styles.html">
   <style include="px-dark-theme-styles" is="custom-style"></style>
-  -->
+  
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
