--- a/public/elements/seed-app/seed-app.html
+++ b/public/elements/seed-app/seed-app.html
@@ -131,7 +131,7 @@
           value: function() {
             return [
               {
-                "label": "Asset Monitoring",
+                "label": "Turbine Monitoring",
                 "path": "/rmd",
                 "icon": "fa-line-chart"
               },
