--- a/public/elements/timeseries-chart/timeseries-chart.html
+++ b/public/elements/timeseries-chart/timeseries-chart.html
@@ -26,7 +26,7 @@ Component will query for new data when tags or dates are changed.
               </px-dropdown>
             </div>
           </div>
-          <div class="u-1/4-desk u-1/1-palm"></div>
+          <div class="u-1/4-desk u-1/1-palm"><button id="toggleChartBtn" class="btn">Show Live Data</button></div>
           <div class="u-1/2-desk u-1/1-palm">
             <px-rangepicker id="tsRangepicker" range="{{selectedRange}}" hidden$="{{liveDataMode}}"></px-rangepicker>
             <div id="chartMessage" class="u-pt--" hidden$="{{!liveDataMode}}"></div>
