--- a/public/elements/timeseries-chart/timeseries-chart.html
+++ b/public/elements/timeseries-chart/timeseries-chart.html
@@ -86,6 +86,46 @@ Component will query for new data when tags or dates are changed.
         }
       },
 
+      updateBoxesTemperature = function(id,data) {
+        console.log("I'm updating box " + id + " with temperature");
+        var str = "turbine" + id;
+
+        if (data != null) {
+          value = JSON.parse(data).value;
+
+          if (id == 1) {
+              var c = document.getElementById(str + "rectangle");
+              document.getElementById(str + "temperature").innerHTML = value;
+          } else if (id == 2) {
+              var c = document.getElementById(str + "rectangle");
+              document.getElementById(str + "temperature").innerHTML = value;
+          } else {
+              var c = document.getElementById(str + "rectangle");
+              document.getElementById(str + "temperature").innerHTML = value;
+          }
+        }
+      },
+
+      updateBoxesVoltage = function(id,data) {
+        console.log("I'm updating box " + id + " with voltage");
+        var str = "turbine" + id;
+
+        if (data != null) {
+          value = JSON.parse(data).value;
+
+          if (id == 1) {
+              var c = document.getElementById(str + "rectangle");
+              document.getElementById(str + "voltage").innerHTML = value;
+          } else if (id == 2) {
+              var c = document.getElementById(str + "rectangle");
+              document.getElementById(str + "voltage").innerHTML = value;
+          } else {
+              var c = document.getElementById(str + "rectangle");
+              document.getElementById(str + "voltage").innerHTML = value;
+          }
+        }
+      },
+
       updateBoxesError = function(tag) {
         if ( (tag == "Compressor-2017:Turbine1Temperature") ||
           ("Compressor-2017:Turbine1Voltage") ||
@@ -222,24 +262,6 @@ Component will query for new data when tags or dates are changed.
            xmlhttp.send();
       }, 2000);
 
-      //Balint: Update temperature of turbine 1
-      setInterval(function(){
-        var temperature = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/1/sensors/temperature";
-        console.log('recording temperature: ' + temperature);
-        var xmlhttp = new XMLHttpRequest();
-        xmlhttp.onreadystatechange = function() {
-          if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
-             if (xmlhttp.status == 200) {
-              var response = xmlhttp.responseText;
-              updateBoxesOnline(1,response);
-            }
-          }
-        }
-
-         xmlhttp.open("GET", temperature, true);
-         xmlhttp.send();
-    }, 2000);
-
         // Update heartbeat status of turbine 2
         setInterval(function(){
           var heartbeat = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/2/heartbeat";
@@ -249,28 +271,13 @@ Component will query for new data when tags or dates are changed.
             if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
                if (xmlhttp.status == 200) {
                 var response = xmlhttp.responseText;
-                updateBoxesOnline(2,response);
+                updateBoxesHeartbeat(2,response);
              xmlhttp.open("GET", heartbeat, true);
              xmlhttp.send();
-        }, 2000);
-
-          // Update heartbeat status of turbine 2
-          setInterval(function(){
-            var heartbeat = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/2/heartbeat";
-            console.log('recording heartbeat: ' + heartbeat);
-            var xmlhttp = new XMLHttpRequest();
-            xmlhttp.onreadystatechange = function() {
-              if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
-                 if (xmlhttp.status == 200) {
-                  var response = xmlhttp.responseText;
-                  updateBoxesHeartbeat(2,response);
-                }
-              }
-            }
-
-             xmlhttp.open("GET", heartbeat, true);
-             xmlhttp.send();
-        }, 2000);
+           }
+         }
+        }
+      }, 2000);
 
           // Update heartbeat status of turbine 3
           setInterval(function(){
@@ -289,6 +296,114 @@ Component will query for new data when tags or dates are changed.
              xmlhttp.open("GET", heartbeat, true);
              xmlhttp.send();
         }, 2000);
+
+      //Balint: Update voltage of turbine 1
+      setInterval(function(){
+        var voltage = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/1/sensors/voltage";
+        console.log('recording voltage: ' + voltage);
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+          if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+             if (xmlhttp.status == 200) {
+              var response = xmlhttp.responseText;
+              updateBoxesVoltage(1,response);
+            }
+          }
+        }
+
+         xmlhttp.open("GET", voltage, true);
+         xmlhttp.send();
+    }, 2000);
+
+      //Balint: Update voltage of turbine 2
+      setInterval(function(){
+        var voltage = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/2/sensors/voltage";
+        console.log('recording voltage: ' + voltage);
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+          if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+             if (xmlhttp.status == 200) {
+              var response = xmlhttp.responseText;
+              updateBoxesVoltage(2,response);
+            }
+          }
+        }
+
+         xmlhttp.open("GET", voltage, true);
+         xmlhttp.send();
+    }, 2000);
+
+      //Balint: Update voltage of turbine 3
+      setInterval(function(){
+        var voltage = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/3/sensors/voltage";
+        console.log('recording voltage: ' + voltage);
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+          if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+             if (xmlhttp.status == 200) {
+              var response = xmlhttp.responseText;
+              updateBoxesVoltage(3,response);
+            }
+          }
+        }
+
+         xmlhttp.open("GET", voltage, true);
+         xmlhttp.send();
+    }, 2000);
+
+      //Balint: Update temperature of turbine 1
+      setInterval(function(){
+        var temperature = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/1/sensors/temperature";
+        console.log('recording temperature: ' + temperature);
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+          if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+             if (xmlhttp.status == 200) {
+              var response = xmlhttp.responseText;
+              updateBoxesTemperature(1,response);
+            }
+          }
+        }
+
+         xmlhttp.open("GET", temperature, true);
+         xmlhttp.send();
+    }, 2000);
+
+      //Balint: Update temperature of turbine 2
+      setInterval(function(){
+        var temperature = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/2/sensors/temperature";
+        console.log('recording temperature: ' + temperature);
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+          if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+             if (xmlhttp.status == 200) {
+              var response = xmlhttp.responseText;
+              updateBoxesTemperature(2,response);
+            }
+          }
+        }
+
+         xmlhttp.open("GET", temperature, true);
+         xmlhttp.send();
+    }, 2000);
+
+      //Balint: Update temperature of turbine 3
+      setInterval(function(){
+        var temperature = "https://turbine-farm.run.aws-usw02-pr.ice.predix.io/api/turbines/3/sensors/temperature";
+        console.log('recording temperature: ' + temperature);
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange = function() {
+          if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+             if (xmlhttp.status == 200) {
+              var response = xmlhttp.responseText;
+              updateBoxesTemperature(3,response);
+            }
+          }
+        }
+
+         xmlhttp.open("GET", temperature, true);
+         xmlhttp.send();
+    }, 2000);
       },
 
       _getFirstSelectedTag: function(tags) {
@@ -477,7 +592,6 @@ Component will query for new data when tags or dates are changed.
                 var response = xmlhttp.responseText;
 
                 if (response != null) {
-                  updateBoxes(response);
                  if (type == 1)
                  {
                     self.push('tsChartData', {"x0": JSON.parse(response).timestamp, "y0": JSON.parse(response).value});
@@ -485,9 +599,7 @@ Component will query for new data when tags or dates are changed.
                   else if (type == 2)
                   {
                     self.push('tsChartData', {"x0": JSON.parse(response).timestamp, "y0": JSON.parse(response).value});
-                  }
-                } else {
-                  updateBoxesError(tag);
+                 i }
                 }
               }
             }
